# duck

./: .gitignore  AGENTS.md  CHANGELOG.md  CODING-PRACTICES.md  CONTRIBUTING.md  DUCK_PROJECT_REFERENCE.md  MANIFEST.in  README.md  SECURITY.md  TESTING.md  WIKI_SUMMARY.md  feature_request.md  pyproject.toml  requirements.txt  server.json  test_installation.py  todo.md  why_duck.md
.duck/secrets/: DXS
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docs.yml  pypi-publish.yml  testpypi-publish.yml
ai/: CODE_STYLE_GUIDE.md  DUCK_PROJECT_GUIDE.md  HTML_COMPONENTS.md  HTML_COMPONENTS_GUIDE.md  SECURITY_GUIDE.md  SKILLS.md
docs/: README.md  index.html  requirements.txt
docs/source/: asgi.md  authentication.md  automations.md  background-managers.md  blueprint.md  build-reactive-chat-app.md  cached-components.md  cached-views.md  changelog.md  conf.py  counterapp.md  dashboard.md  database.md  deployment.md  django-integration.md  free-ssl-certificate.md  getting-started.md  https-and-http2.md  index.html  index.rst  jwt.md  lively-components.md  logging.md  mcp.md  microapp.md  middlewares.md  monitoring.md  project-structure.md  request-and-response.md  running-server.md  service-management.md  sessions.md  settings.md  shortcuts.md  sitemap.md  sitemap.py  templates.md  templatetags.md  utils.md  websocket.md  (+2 more)
docs/source/_templates/: page.html  versioning.html
docs/source/ai-guidelines/: agents.rst  code-style-guide.rst  duck-project-guide.rst  html-components-guide.rst  index.rst  security-guide.rst
docs/source/api/: index.rst
duck/: __init__.py  __main__.py  ansi.py  art.py  compat.py  csp.py  env.py  globals.py  processes.py  secrets.py  storage.py  urls.py  version.py  views.py
duck/app/: __init__.py  app.py  base.py  microapp.py
duck/automation/: __init__.py  dispatcher.py  trigger.py
duck/backend/django/: bridge.py  logging.py  setup.py  urls.py  utils.py  views.py
duck/cli/commands/: collectstatic.py  django.py  logs.py  makeblueprint.py  makeproject.py  monitor.py  runserver.py  runtests.py  service.py  sitemap.py  ssl_gen.py
duck/contrib/: asyncio.py  sitemap.py
duck/contrib/auth/: __init__.py  exceptions.py  helpers.py
duck/contrib/jwt/: __init__.py
duck/contrib/mcp/: __init__.py  auth.py  codes.py  decorators.py  exceptions.py  session.py  testserver.py
duck/contrib/reloader/: dependency_graph.py  ducksight.py
duck/contrib/responses/: __init__.py  base.py  errors.py  simple_response.py  template_response.py
duck/contrib/sync/: __init__.py  smart_async.py  sync_to_async.py
duck/contrib/websockets/: __init__.py  exceptions.py  extensions.py  frame.py  logging.py  opcodes.py
duck/db/: hooks.py
duck/etc/: middlewares.py  settings.py
duck/etc/apps/: README.md
duck/etc/automations/: certbot.py  ssl.py
duck/etc/headers/: default.json  default_ssl.json
duck/etc/internals/: template.py
duck/etc/ssl/: README.md
duck/etc/structures/: README.md
duck/etc/templates/: 404.html  base.html  csrf_error.html
duck/etc/templatetags/: __init__.py
duck/exceptions/: all.py
duck/html/: __init__.py
duck/html/components/: __init__.py  button.py  card.py  checkbox.py  code.py  container.py  duck.py  fileinput.py  footer.py  form.py  heading.py  hero.py  icon.py  image.py  input.py  label.py  link.py  lively.py  modal.py  navbar.py  page.py  paragraph.py  progressbar.py  script.py  section.py  select.py  snackbar.py  span.py  style.py  table_of_contents.py  textarea.py  unsupported_browser.py  video.py
duck/http/: content.py  headers.py  mimes.py  querydict.py  request.py  response.py  response_payload.py
duck/http/core/: asgi.py  handler.py  processor.py  proxyhandler.py  response_finalizer.py  wsgi.py
duck/http/fileuploads/: __init__.py
duck/http/jwt/: engine.py
duck/http/middlewares/: __init__.py
duck/http/session/: connector.py  engine.py  session_storage_connector.py
duck/logging/: console.py  handler.py  logger.py
duck/meta/: __init__.py
duck/routes/: __init__.py  route_blueprint.py  route_registry.py
duck/security/: __init__.py  dashboard.py  passwords.py
duck/settings/: loaded.py  settings.py
duck/setup/: __init__.py  makeblueprint.py
duck/shortcuts/: __init__.py
duck/template/: environment.py  loaders.py  response.py  templatetags.py
duck/tests/: test_routes.py  test_server.py  test_websocket_navigation.py
duck/utils/: __init__.py  ansi.py  callabletools.py  codesandbox.py  cookie_consent.py  encrypt.py  eventlist.py  fileio.py  filelock.py  headers.py  importer.py  lazy.py  net.py  object_from_id.py  object_mapping.py  path.py  performance.py  port_recorder.py  port_registry.py  ssl.py  string.py  timer.py  urlcrack.py  urldecode.py  validation.py
duck/utils/asyncio/: __init__.py  eventloop.py
duck/utils/caching/: __init__.py  encrypted.py
duck/utils/email/: __init__.py  collection.py
duck/utils/fileio/: __init__.py  fileio_old.py  test_fileio.py
duck/utils/multiprocessing/: __init__.py  process_manager.py  processpool.py  proxy.py  (+1 more)
duckframework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wiki/: Components.md  Configuration.md  Contributing.md  Deployment.md  Django-Integration.md  FAQ.md  Features.md  Getting-Started.md  Home.md  README.md  Tutorial.md
(+398 files in other folders)
