[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckframework"
version = "1.0.1"
description = "Duck is a powerful, open-source, full-fledged Python-based web server, framework, and reverse proxy designed for building modern, customizable web applications — from small sites to large-scale platforms."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [
    { name = "Brian Musakwa", email = "digreatbrian@gmail.com" },
]
maintainers = [
    { name = "Brian Musakwa", email = "digreatbrian@gmail.com" },
]
dependencies = [
    "Django>=5.1.5",
    "Jinja2>=3.1.5",
    "watchdog>=4.0.1",
    "requests>=2.31.0",
    "h2>=4.2.0",
    "msgpack>=1.1.1",
    "diskcache",
    "colorama",
    "tzdata",
    "click",
    "asgiref>=3.8.1",
    "psutil>=7.0.0",
    "rich>=14.1.0",
    "setproctitle",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "Python",
    "web framework",
    "web server",
    "reverse proxy",
    "HTTP/2",
    "WSGI",
    "ASGI",
    "Django integration",
    "Flask",
    "Tornado",
    "FastAPI",
    "microservices",
    "middleware",
    "high-performance",
    "async",
    "Duck framework",
    "routing",
    "load balancing",
    "HTTP proxy",
    "web application"
]

[project.urls]
Homepage = "https://duckframework.xyz"
Source = "https://github.com/duckframework/duck"
Issues = "https://github.com/duckframework/duck/issues"
Documentation = "https://docs.duckframework.xyz"
Funding = "https://duckframework.xyz/contribute"

[project.entry-points.console_scripts]
duck = "duck.__main__:cli"

[tool.setuptools.dynamic]
version = {attr = "duck.__version__"}

[tool.setuptools.packages.find]
include = ["duck*"]
