[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckframework"
dynamic = ["version", "dependencies"]
description = "Build high-performance, scalable, server-side reactive web applications — without a separate frontend framework or a complex JavaScript stack."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE", "AUTHORS.md"]
authors = [
    { name = "Brian Musakwa", email = "digreatbrian@gmail.com" },
]
maintainers = [
    { name = "Brian Musakwa", email = "digreatbrian@gmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "python",
    "web framework",
    "python web framework",
    "server-side rendering",
    "reactive web framework",
    "reactive ui",
    "full-stack framework",
    "full-stack web framework",
    "web applications",
    "web server",
    "http server",
    "https",
    "http2",
    "http/2",
    "websockets",
    "real-time",
    "async",
    "asgi",
    "wsgi",
    "middleware",
    "routing",
    "authentication",
    "jwt",
    "reverse proxy",
    "load balancer",
    "microservices",
    "api framework",
    "backend framework",
    "high performance",
    "scalable",
    "duck framework"
]

[project.urls]
Organization = "https://github.com/duckframework"
Homepage = "https://duckframework.com"
Contribution = "https://duckframework.com/contribute"
Blog = "https://duckframework.com/blog"
Documentation = "https://docs.duckframework.com"
Source = "https://github.com/duckframework/duck"
Issues = "https://github.com/duckframework/duck/issues"

[project.scripts]
duck = "duck.__main__:cli"

[tool.setuptools.dynamic]
version = {attr = "duck.__version__"}
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["duck*"]
where = ["."]
